audioconvert: If we have to lose precision, try to lose as less precision as possible

https://bugzilla.gnome.org/show_bug.cgi?id=706624